--- a/shivamkiBandiKeBhaiKaProject/package.json
+++ b/shivamkiBandiKeBhaiKaProject/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "figlet": "^1.5.2",
     "gradient-string": "^2.0.2",
+    "jimp": "^0.16.2",
     "multer": "^1.4.5-lts.1",
     "unzipper": "^0.10.11"
   }
